--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
-    "mysql2": "^1.6.4",
-    "sequelize": "^4.41.2"
+    "mysql2": "^1.6.4"
   }
 }
