--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "author": "Utkarsh Raj",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.2",
+    "bcrypt": "^3.0.4",
     "cors": "^2.8.5",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "express-validator": "^5.3.0",
-    "jsonwebtoken": "^8.3.0",
+    "express-validator": "^5.3.1",
+    "helmet": "^3.15.0",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
-    "mysql2": "^1.6.4"
+    "mysql2": "^1.6.5",
+    "nodemailer": "^5.1.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "chalk": "^2.4.2"
   }
 }
