--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Utkarsh Raj",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcrypt": "^3.0.4",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -20,8 +21,6 @@
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
-    "nodemailer": "^5.1.1",
-    "nodemailer-sendgrid-transport": "^0.2.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
